# ttnte

./: .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yml
bindings/: bindings.cpp  linalg.cpp
bindings/cad/: CMakeLists.txt  basis.hpp  basis_functions.cpp  bindings.cpp  bspline.cpp  bspline_basis.cpp  patch.cpp
bindings/driver/: CMakeLists.txt  bindings.cpp  transport_driver.cpp  transport_driver.hpp
bindings/linalg/: CMakeLists.txt  bindings.cpp  contraction_step.cpp  csr_operator.cpp  eig.cpp  fission_operator.cpp  format_type.cpp  gmres.cpp  linear_operator.cpp  linear_system.cpp  matrix_ops.cpp  neighbor_coupling.cpp  operator.cpp  ops.cpp  scatter_operator.cpp  source.cpp  sparse_operator.cpp  state.cpp  tt_engine.cpp  tt_linear_system.cpp  tt_operator.cpp  tt_ops.cpp  tt_state.cpp  utils.cpp
bindings/math/: CMakeLists.txt  bindings.cpp  quadrature_set.cpp  special.cpp
bindings/mesh/: CMakeLists.txt  bindings.cpp  connectivity_graph.cpp  mesh.hpp  mesh_block.hpp  mesh_block_boundary.cpp
bindings/parallel/: CMakeLists.txt  bindings.cpp  boundary_communicator.cpp  communicator.cpp  heuristics.hpp  load_balancer.hpp  parallel_context.cpp  request.cpp  routing_table.cpp  stream_guard.cpp  stream_handle.cpp  stream_pool.cpp  thread_pool.cpp
bindings/physics/: CMakeLists.txt  assembly_configs.cpp  bindings.cpp  boundary_types.cpp  dg_assembler.cpp  dg_first_order_transport_assembler.cpp  dg_first_order_transport_backends.cpp
bindings/python/: CMakeLists.txt  bindings.cpp
bindings/solvers/: CMakeLists.txt  amen_solver.cpp  bindings.cpp  block_jacobi_strategy.cpp  dd_solver.cpp  dd_solver.hpp  dd_strategy.cpp  local_solver.cpp  memory_policy.cpp  solver_configs.cpp
bindings/task/: CMakeLists.txt  bindings.cpp  task.cpp  task_graph.cpp  task_scheduler.cpp
bindings/utils/: CMakeLists.txt  bindings.cpp  label.hpp  parallel_context.cpp
bindings/xs/: CMakeLists.txt  bindings.cpp  material.cpp  server.cpp
include/ttnte/cad/: basis.hpp  basis_functions.hpp  bspline.hpp  bspline_basis.hpp  bspline_kernels.hpp  bspline_math.cuh  patch.hpp  patch_kernels.hpp  patch_math.cuh
include/ttnte/driver/: transport_driver.hpp
include/ttnte/linalg/: binomial.hpp  contraction_step.hpp  csr_operator.hpp  eig.hpp  fission_operator.hpp  format_type.hpp  gmres.hpp  linear_operator.hpp  linear_system.hpp  matrix_config.hpp  matrix_ops.hpp  neighbor_coupling.hpp  operator.hpp  ops.hpp  scatter_operator.hpp  source.hpp  sparse_operator.hpp  state.hpp  tt_config.hpp  tt_engine.hpp  tt_linear_system.hpp  tt_operator.hpp  tt_ops.hpp  tt_state.hpp
include/ttnte/math/: quadrature_set.hpp  special.hpp
include/ttnte/mesh/: connectivity_graph.hpp  mesh.hpp  mesh_block.hpp  (+1 more)
notebooks/: linearly_anisotropic_1d.ipynb  pu1d.ipynb  two_region_1d.ipynb
notebooks/archive/: bwr_assembly_3d.ipynb  bwr_core.ipynb  c5g7.ipynb
notebooks/circle/: tt_info.csv
notebooks/cross_source/: cross_source.ipynb
notebooks/eigenvalue/: run_notebooks.sh
notebooks/fixed_source/: run_notebooks.sh
notebooks/lightbridge/: conics.py  lightbridge.ipynb  lightbridgeB.ipynb  lightbridge_ba.ipynb  lightbridge_gas.ipynb  tt_info.csv  tt_info_ba.csv  tt_info_gas.csv
notebooks/owens_pincell/: owens_pincell.ipynb
notebooks/pincell/: pincell.ipynb  tt_info.csv
notebooks/quarter_circle/: tt_info.csv
notebooks/square/: square.ipynb  square_is.ipynb  tt_info_anisotropic.csv  tt_info_is_vac.csv  tt_info_ref.csv  tt_info_vac.csv
scripts/: bwr_assembly.py  bwr_core.py  dmrg_bwr_assembly.py  test_mpi_communication.py
scripts/ans26/: c5g7_pincell.py
scripts/iga/: 1D.py  geometry.py  patch_1d.py  reed.py  solve.py  tt.py
scripts/jcp2025/: extract.py  process.py  runner.py
scripts/scaling/: run.sh
src/cad/: basis_functions.cpp  bspline.cpp  bspline_basis.cpp  patch.cpp
src/linalg/: contraction_step.cpp  csr_operator.cpp  eig.cpp  fission_operator.cpp  gmres.cpp  linear_operator.cpp  linear_system.cpp  matrix_ops.cpp  neighbor_coupling.cpp  operator.cpp  scatter_operator.cpp  sparse_operator.cpp  state.cpp  tt_engine.cpp  tt_linear_system.cpp  tt_operator.cpp  tt_ops.cpp  tt_state.cpp
src/math/: quadrature_set.cpp  special.cpp
src/parallel/: communicator.cpp  mpi_types.cpp  parallel_context.cpp  parmetis_ops.cpp  request.cpp  stream_pool.cpp  thread_pool.cpp
src/physics/: dg_first_order_transport_backends.cpp
src/python/: acquire.cpp  numpy.cpp  package_manager.cpp  release.cpp  torchtt.cpp
src/solvers/: amen_solver.cpp  block_jacobi_strategy.cpp  dd_strategy.cpp  local_solver.cpp
src/task/: task_graph.cpp  task_scheduler.cpp
src/utils/: trigger_global_crash.cpp
src/xs/: material.cpp  server.cpp
tests/: conftest.py
tests/regression/: run_problem.py  test_circle.py  test_crit_verif.py  test_quater_circle.py  test_square.py
tt_nte/: __init__.py  tensor_train.py
tt_nte/benchmarks/: __init__.py  bwr.py  c5g7.py  crit_verif.py
tt_nte/geometry/: __init__.py  geometry.py  regular_mesh.py
tt_nte/methods/: discrete_ordinates.py
tt_nte/solvers/: __init__.py  als.py  gmres.py  mals.py  matrix.py
tt_nte/xs/: server.py
ttnte/: __init__.py
ttnte/archive/: __init__.py  tensor_train.py
ttnte/assemblers/: __init__.py  _utils.py  matrix_assembler.py  operators.py  tt_assembler.py
ttnte/cad/: __init__.py  _patch.py  _utils.py  conics.py  curves.py  patch.py  surfaces.py
ttnte/diagnostics/: timer.py
ttnte/driver/: __init__.py
ttnte/iga/: __init__.py  boundary.py  mesh.py
ttnte/linalg/: __init__.py  csr_operator.py  eig.py  fission_operator.py  fixed_source.py  flux.py  gmres.py  linear_operator.py  operator.py  scatter_operator.py  sparse_operator.py  tt_operator.py
ttnte/math/: __init__.py
ttnte/mesh/: __init__.py
ttnte/parallel/: __init__.py
ttnte/physics/: __init__.py
ttnte/solvers/: __init__.py
ttnte/sources/: __init__.py  isotropic_internal_source.py
ttnte/task/: __init__.py
ttnte/utils/: __init__.py
ttnte/xs/: __init__.py  benchmarks.py  server.py
(+338 files in other folders)
